# 7bit-portal

./: CMakeLists.txt  README.md
src/: main.cpp
